# Terraria

./: CMakeLists.txt  README.md  Terraria.puml  makefile
Borrar despues/: example_Generacion_Mundo_Simple.cpp  example_Mouse.cpp  example_Perlin_Noise_V2.cpp  example_Thread.cpp
Mundos/: Hola mundo
assets/mundos/: Hola mundo
docs/: Notes.txt  TerrariaActual.puml  TerrariaObjetivo.puml
docs/Borrar despues/: example_Mapgenerator.cpp  example_menu.cpp
include/: Bloque.hpp  Camara.hpp  Juego.hpp  Jugador.hpp  Menu.hpp  Mundo.hpp  Objeto.hpp  Personaje.hpp
include/ChatGPT/: PerlinNoise.hpp
src/: main.cpp
